@@ -9,6 +9,9 @@ services with "onreboot nostart" option started the service, but didn't enable t
 The same problem occurred if a new "onreboot nostart" service was added, even if the statefile
 existed.
 
+Fixed: Issue #1029: The generic protocol test truncated the received data in the case that it
+contained zeros.
+
 
 Version 5.31.0
 
